--- a/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -61,8 +61,8 @@
                             <p class="text-center text-muted">Giỏ hàng trống</p>
                         </div>
                         <div class="d-grid gap-2 mt-3">
-                            <a href="/Cart" class="btn btn-primary">Xem giỏ hàng</a>
-                            <a href="/Checkout" class="btn btn-success">Thanh toán</a>
+                            <a href="/Shoppingcart" class="btn btn-primary">Xem giỏ hàng</a>
+                          
                         </div>
                     </div>
                 </div>
