hoàn thanh đăng nhập của sản phẩm

--- a/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -79,7 +79,8 @@
                             <div class="p-2 text-center">
                                 <strong>Xin chào, @username!</strong>
                                 <hr>
-                                <a href="/Account/Register" class="btn btn-danger w-100 mb-2">Đăng xuất</a>
+                                <a asp-controller="Account" asp-action="Logout" class="btn btn-danger w-100 mb-2">Đăng xuất</a>
+
                             </div>
                         }
                         else
