--- a/WebsiteDental/Views/Shoppingcart/Index.cshtml
+++ b/WebsiteDental/Views/Shoppingcart/Index.cshtml
@@ -132,7 +132,8 @@
                 <h4 class="mb-4">Tóm tắt đơn hàng</h4>
 
                 <div class="shoplt-summary-row">
-                    <span>Tạm tính (8 sản phẩm)</span>
+                    <span>Tạm tính:</span>
+
                     <span>@(Convert.ToDecimal(ViewData["TotalAmount"]).ToString("C0", new System.Globalization.CultureInfo("vi-VN")))</span>
 
 
