--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -188,6 +188,8 @@
 
     <!-- Template Javascript -->
     <script src="~/assets/js/main.js"></script>
+    <!-- Render the Scripts section if defined in the page -->
+    @RenderSection("Scripts", required: false)
 
 </body>
 </html>
