--- a/WebsiteDental/Views/Account/Register.cshtml
+++ b/WebsiteDental/Views/Account/Register.cshtml
@@ -58,8 +58,25 @@
                                     </div>
                                 </form>
                             </div>
-                            <!-- XỬ LÝ FROM ĐĂNG KÝ Ở ĐOẠN NÀY -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                            <!-- XỬ LÝ FROM ĐĂNG KÝ Ở ĐOẠN NÀY -->
                             <!-- Register Tab -->
                             <div class="tab-pane fade" id="register-tab-pane" role="tabpanel" aria-labelledby="register-tab" tabindex="0">
                                 <form action="/Account/Register" method="post">
@@ -98,11 +115,29 @@
                                             <input type="tel" class="form-control" id="registerPhone" name="phone" required placeholder="Nhập số điện thoại">
                                         </div>
                                     </div>
+                                    <div class="mb-3">
+                                        <label for="registerAddress" class="form-label">Địa chỉ</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i class="fa fa-map-marker"></i></span>
+                                            <input type="text" class="form-control" id="registerAddress" name="address" required placeholder="Nhập địa chỉ của bạn">
+                                        </div>
+                                    </div>
                                     <div class="d-grid">
                                         <button type="submit" class="btn btn-primary">Đăng ký</button>
                                     </div>
                                 </form>
                             </div>
+
+
+
+
+
+
+
+
+
+
+
                         </div>
                     </div>
                 </div>
