--- a/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -51,15 +51,15 @@
                 <div class="nav-item dropdown cart-icon">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                         <i class="fa fa-shopping-cart me-1"></i>
-                        <span class="badge bg-primary rounded-pill">0</span>
+                        @* <span class="badge bg-primary rounded-pill">0</span> *@
                     </a>
                     <div class="dropdown-menu dropdown-menu-end">
                         <div class="cart-header">
                             <h6 class="mb-3">Giỏ hàng của bạn</h6>
                         </div>
-                        <div class="cart-items">
+                      @*   <div class="cart-items">
                             <p class="text-center text-muted">Giỏ hàng trống</p>
-                        </div>
+                        </div> *@
                         <div class="d-grid gap-2 mt-3">
                             <a href="/Shoppingcart" class="btn btn-primary">Xem giỏ hàng</a>
                           
