--- a/WebsiteDental/Views/Paymoney/Index.cshtml
+++ b/WebsiteDental/Views/Paymoney/Index.cshtml
@@ -35,9 +35,10 @@
                         </div>
                         <div class="mb-3">
                             <label for="note" class="form-label">Ghi chú</label>
-                            <textarea class="form-control" id="note" rows="3" placeholder="Ghi chú về đơn hàng, ví dụ: thời gian hay chỉ dẫn địa điểm giao hàng chi tiết hơn."></textarea>
-                        </div>                  
-                </div>
+                            <textarea class="form-control" id="note" name="Notes" rows="3" placeholder="Ghi chú về đơn hàng, ví dụ: thời gian hay chỉ dẫn địa điểm giao hàng chi tiết hơn."></textarea>
+                        </div>
+
+                 </div>
 
                 <!-- Shipping Method -->
                 <div class="checkout-card">
